--- a/ProyectoFinal_G2/src/Components/Buttons/index.css
+++ b/ProyectoFinal_G2/src/Components/Buttons/index.css
@@ -1,4 +1,6 @@
-/* src/Button.css */
+@import url("../../global.css");
+
+
 .button {
     display: flex;
     justify-content: center;
@@ -29,6 +31,18 @@
     border-radius: 6px;
     flex-shrink: 0;
   }
+
+  /* Light theme */
+.light .button {
+  background-color: var(--primary-light-green);
+  color: var(--neutral-white);
+}
+
+/* Dark theme */
+.dark .button {
+  background-color: var(--secondary-cool-iris);
+  color: var(--primary-light-green);
+}
   
   
 
