--- a/ProyectoFinal_G2/src/Components/Buttons/index.css
+++ b/ProyectoFinal_G2/src/Components/Buttons/index.css
@@ -12,7 +12,7 @@
   }
   
   .login-button {
-    width: 288px;
+    width: 362px;
     height: 47px;
     background-color: #4CC986; 
     border-radius: 6px; 
@@ -31,7 +31,24 @@
     border-radius: 6px;
     flex-shrink: 0;
   }
+  
+.icon-button {
+  width: 362px;
+  height: 47px;
+  background-color: #303030; 
+  border-radius: 6px; 
+  border: 2px white;
+  flex-shrink: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.icon-button .button-icon {
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+}
   /* Light theme */
 .primary .button {
   background-color: var(--primary-super-green);
