Import para google fonts

--- a/ProyectoFinal_G2/src/global.css
+++ b/ProyectoFinal_G2/src/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo:wght@400;700&display=swap');
+
 :root{
     --primary-light-green : #5FE19B;
     --primary-super-green : #4CC986;
