Iconos del dropdown

--- a/ProyectoFinal_G2/src/Components/Dropdown/index.module.css
+++ b/ProyectoFinal_G2/src/Components/Dropdown/index.module.css
@@ -20,7 +20,7 @@
   color: var(--neutral-grayLight);
   border: none;
   cursor: pointer;
-  background-color: aqua;
+  background-color: #FFFFFF;
 }
 
 .dropdown_toggle:focus-visible {
