--- a/ProyectoFinal_G2/src/Components/Buttons/index.css
+++ b/ProyectoFinal_G2/src/Components/Buttons/index.css
@@ -31,6 +31,14 @@
     border-radius: 6px;
     flex-shrink: 0;
   }
+  .purchase-button {
+    width: 229px;
+    height: 47px;
+    flex-shrink: 0;
+    background-color: transparent;
+    border-radius: 6px;
+    border: 2px solid #36B972;
+  }
   
 .icon-button {
   width: 362px;
