--- a/ProyectoFinal_G2/src/global.css
+++ b/ProyectoFinal_G2/src/global.css
@@ -12,6 +12,7 @@
     --neutral-grayDark: #303030;
     --neutral-gray: #515151;
     --neutral-grayLight: #939393;
-    --neutral-white: #FFFFFF;
+    --neutral-white: #ffffff;
+    --background-whiteMode: #C4C4C4;
     --font-family: "Exo", sans-serif;
 }
