--- a/ProyectoFinal_G2/src/App.css
+++ b/ProyectoFinal_G2/src/App.css
@@ -1,3 +1,4 @@
+@import url(./global.css);
 html, body {
     margin: 0;
     padding: 0;
@@ -10,17 +11,22 @@ html, body {
 }
 
 .app.dark {
-  background-color: #151515;;
+  background-color: #151515;
   color: #FFFFFF;
 }
 
 .app.light {
-  background-color: #F0F0F0;
+  background-color: var(--background-whiteMode);
   color: #515151;
 }
 
 .switch-wrapper {
   position: absolute;
+  display: inline-flex;
   top: 121px;
   right: 40px;
+}
+
+.switch-wrapper p{
+  margin: 0.5rem 1rem 0 0;
 }
