--- a/ProyectoFinal_G2/src/App.css
+++ b/ProyectoFinal_G2/src/App.css
@@ -1,12 +1,15 @@
 html, body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .app {
   display: flex;
-  width: 100vw;
-  height: 100vh;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .app.dark {
@@ -19,8 +22,57 @@ html, body {
   color: #515151;
 }
 
-.switch-wrapper {
+.switch-wrapper-principal {
   position: absolute;
   top: 121px;
   right: 40px;
+}
+
+.header {
+  width: 100%;
+}
+
+.header.dark {
+  color: #515151;
+}
+
+.header.light {
+  color: #FFFFFF;
+}
+
+.header-text {
+  text-align: left;
+  margin-top: 1rem;
+  margin-left: 40px;
+}
+
+.header-text h1 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+.header-text p {
+  font-size: 1rem;
+  margin: 0.5rem 0 0 0;
+}
+
+.main-content {
+  display: flex;
+  flex: 1;
+  margin-top: 1rem;
+  width: 100%;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  align-items: center;
+}
+
+@media (min-width: 768px) {
+  .content {
+    margin-left: 263px;
+  }
 }
