--- a/ProyectoFinal_G2/src/Components/Login/index.css
+++ b/ProyectoFinal_G2/src/Components/Login/index.css
@@ -1,57 +1,71 @@
+.switch-wrapper-login {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
 .login-screen {
-  background: url('../../assets/BG.png');
-  background-repeat: no-repeat;
-  background-size: cover;
   width: 100vw;
   height: 100vh;
   flex-shrink: 0; 
   display: flex;
   justify-content: flex-end; 
   align-items: center;
-  
-  
-  
+  position: relative;
 }
+
 .conteiner-login {
   width: 462px;
   height: 702px;
   border-radius: 1rem;
   flex-shrink: 0; 
-  background-color: #16161670;
-  background-blend-mode: lighten;
-  backdrop-filter: blur(10px);
   display: flex;
   flex-direction: column;
   justify-content:center;
   align-items: center;
   gap: 1rem;
- 
+  margin-top: 178px;
+  margin-bottom: 144px;
+  margin-right: 99px;
+  margin-left: 879px;
 }
+
+.conteiner-login .icon-button {
+  width: 362px;
+  height: 47px;
+  flex-shrink: 0;
+  border-radius: 6px;
+  border: 2px solid;
+  background-color: transparent;
+  font-size: 18px;
+  font-family: Exo;
+  font-weight: 700;
+  margin: 6px;
+}
+
 .children-conteiner-login {
   display: flex;
   flex-direction: column;
   justify-content:center;
   align-items: center;
-  gap: 1rem;
+  gap: 6px;
 }
 
 .or-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 20px;
+  margin: 10px;
 }
 
 .line {
   width: 147.441px;
   height: 2.074px;
-  background-color: #FFF;
   flex-shrink: 0;
 }
 
 .or-text {
   margin: 0 10px;
-  color: #FFF;
   font-family: "Open Sans";
   font-size: 15px;
   font-style: normal;
@@ -59,6 +73,50 @@
   line-height: normal;
 }
 
+.login-screen.dark {
+  background: url('../../assets/BG.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+.login-screen.dark .conteiner-login {
+  background-color: #16161670;
+  background-blend-mode: lighten;
+  backdrop-filter: blur(10px);
+}
 
+.login-screen.dark .icon-button {
+  border-color: #FFF;
+  color: #FFF;
+}
 
+.login-screen.dark .line {
+  background-color: #FFF;
+}
+
+.login-screen.dark .or-text {
+  color: #FFF;
+}
+
+.login-screen.light {
+  background: url('../../assets/BG_light.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login-screen.light .conteiner-login {
+  background-color: #F0F0F0;
+}
+
+.login-screen.light .icon-button {
+  border-color: #36B972;
+  color: #36B972;
+}
+
+.login-screen.light .line {
+  background-color: #515151;
+}
+
+.login-screen.light .or-text {
+  color: #515151;
+}
