--- a/ProyectoFinal_G2/src/Components/Sidebar/SidebarDark.css
+++ b/ProyectoFinal_G2/src/Components/Sidebar/SidebarDark.css
@@ -5,6 +5,7 @@
   left: 0;
   top: 202px;
   padding: 20px;
+  background-color: inherit;
 }
 
 .sidebar.dark ul {
@@ -65,4 +66,16 @@
   height: 24px;
   flex-shrink: 0;
   margin-right: 5px;
+}
+
+@media (max-width: 768px) {
+  .sidebar.dark {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .sidebar.dark {
+    display: block;
+  }
 }
