--- a/ProyectoFinal_G2/src/Components/Login/index.css
+++ b/ProyectoFinal_G2/src/Components/Login/index.css
@@ -77,6 +77,7 @@
   background: url('../../assets/BG.png');
   background-repeat: no-repeat;
   background-size: cover;
+  color: #FFF;
 }
 
 .login-screen.dark .conteiner-login {
