--- a/ProyectoFinal_G2/src/Components/BigCards/index.module.css
+++ b/ProyectoFinal_G2/src/Components/BigCards/index.module.css
@@ -13,6 +13,8 @@
   transition: transform 0.2s; /* Transición para el efecto hover */
   box-shadow: 0 0 10px var(--primary-super-green); /* Sombra para las tarjetas */
 }
+
+
 .divContainerCardInfo:hover {
   transform: scale(1.05); /* Aumentar ligeramente el tamaño al hacer hover */
 }
@@ -21,16 +23,16 @@
   color: var(--neutral-gray);
 }
 .div_img img {
-  border-top-left-radius: 1rem;
+  border-top-left-radius: 0rem;
   border-top-right-radius: 1rem;
   width: 100%;
-  height: 25.97656rem;
+  height: 19.25rem;
   z-index: 0;
 }
 .footer {
   position: absolute;
   z-index: 100;
-  width: 100%;
+  width: 43.5625rem;
   height: 12.56rem;
   background-color: var(--neutral-white);
 }
